added app skeleton

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">Hackathon</string>
+    <string name="app_name">FoodThings</string>
+    <string name="sign_out">Sign out</string>
+    <string name="tell_your_friends">Tell your friends</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="play_services_error">Google Play Services error.</string>
+    <string name="auth_failed">Authentication failed.</string>
+    <string name="no_network">No Network Connectivity.</string>
+    <string name="sign_in_with_google">Sign in with Google</string>
 </resources>
