--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,22 @@
     <string name="why_answer">Food comprises about 17% of NYC\'s waste stream. When this material is sent to a landfill it contributes to NYCs disposal costs and can create greenhouse gas emissions. When composted, food scraps and other organic waste become a useful product that adds nutrients and improves the quality of soil for street trees, gardens and more.</string>
     <string name="why_recycle_cont">Why recycle food waste at all?</string>
     <string name="why_answer_cont">New York City has shown incredible leadership on food waste recycling to first prevent, then recover, and finally recycle any remaining food with implement government policy and laws along with dedicated and simple organic waste recycling practices.</string>
-    <string name="hours_unavailable">Hours are unavailable.</string>
-    <string name="days_unavailable">Days are unavailable.</string>
+    <string name="hours_unavailable">Hours are unavailable</string>
+    <string name="days_unavailable">Days are unavailable</string>
     <string name="results_returned">Food scrap drop off sites returned.</string>
     <string name="skip">Skip</string>
+    <string name="tap_anywhere_to_continue">Tap anywhere to continue</string>
+    <string name="food_scrap_drop_off_site_location_details">Drop Off Site Location Details</string>
+    <string name="org_unavailable">Organization name unavailable</string>
+    <string name="address_unavailable">Address is unavailable</string>
+    <string name="postcode_unavailabe">Postcode is unavailable</string>
+    <string name="citymap_unavail">CityMap is unavailable.</string>
+    <string name="citymap_click">Click to visit CityMap</string>
+    <string name="website_unavail">Website is unavailable.</string>
+    <string name="website_click">Click to visit Website</string>
+    <string name="materails_unavail">Materials accepted are unavailable</string>
+    <string name="months_unavail">Months of operation are unavailable</string>
+    <string name="reqs_unavail">Requirements are unavailable</string>
+    <string name="board_unavail">Community board is unavailable</string>
+    <string name="council_unavail">Community council is unavailable</string>
 </resources>
